--- a/index.html
+++ b/index.html
@@ -12,25 +12,86 @@
 <body>
     <div class="app-container flex column">
         <div class="main grow flex">
-            <div class="sidebar no-shrink">
-
+            <div class="sidebar no-shrink flex column">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="" class="logo-big">
+                    <img src="img/logo-small.svg" alt="" class="logo-small">
+                </div>
+                <div class="nav">
+                    <div class="focus"></div>
+                    <ul class="fa-ul">
+                        <li class="flex home">
+                            <span class="fa-li">
+                                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M448 463.746h-149.333v-149.333h-85.334v149.333h-149.333v-315.428l192-111.746 192 110.984v316.19z" fill="currentColor"/></svg>
+                            </span>
+                            <span class="hide-menu">Home</span>
+                        </li>
+                        <li class="flex ">
+                            <span class="fa-li">
+                                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M349.714 347.937l93.714 109.969-16.254 13.969-93.969-109.969q-48.508 36.825-109.207 36.825-36.826 0-70.476-14.349t-57.905-38.603-38.603-57.905-14.349-70.476 14.349-70.476 38.603-57.905 57.905-38.603 70.476-14.349 70.476 14.349 57.905 38.603 38.603 57.905 14.349 70.476q0 37.841-14.73 71.619t-40.889 58.921zM224 377.397q43.428 0 80.254-21.461t58.286-58.286 21.461-80.254-21.461-80.254-58.286-58.285-80.254-21.46-80.254 21.46-58.285 58.285-21.46 80.254 21.46 80.254 58.285 58.286 80.254 21.461z" fill="currentColor" fill-rule="evenodd"/></svg>
+                            </span>
+                            <span class="hide-menu">Cerca</span>
+                        </li>
+                        <li class="flex ">
+                            <span class="fa-li">
+                                <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M291.301 81.778l166.349 373.587-19.301 8.635-166.349-373.587zM64 463.746v-384h21.334v384h-21.334zM192 463.746v-384h21.334v384h-21.334z" fill="currentColor"/></svg>
+                            </span>
+                            <span class="hide-menu">La tua libreria</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="playlist hide-menu">
+                    <div class="add-playlist">
+                        <h3>PLAYLIST</h3>
+                        <a href="#" class="add-button">+</a><span>Crea Playlist</span>
+                    </div>
+                    <div class="playlist-list">
+                        <ul>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                            <li>Nome Playlist</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="user">
+                        <div class="flex download">
+                            <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Download icon</title><path d="M12 11.657V6h-1v5.65L9.076 9.414l-.758.65 3.183 3.702 3.195-3.7-.758-.653L12 11.657zM11.5 2C7.358 2 4 5.358 4 9.5c0 4.142 3.358 7.5 7.5 7.5 4.142 0 7.5-3.358 7.5-7.5C19 5.358 15.642 2 11.5 2zm0 14C7.916 16 5 13.084 5 9.5S7.916 3 11.5 3 18 5.916 18 9.5 15.084 16 11.5 16z" fill="currentColor" fill-rule="evenodd"/></svg>
+                            <span class="hide-menu">Installa app</span>
+                        </div>
+                        <hr>
+                        <div class="flex user-name">
+                            <svg viewBox="0 0 80 90" xmlns="http://www.w3.org/2000/svg"><title>User Icon</title><path d="M67.74 61.78l-14.5-8.334c-.735-.422-1.24-1.145-1.385-1.98-.145-.835.088-1.685.638-2.33l5.912-6.93c3.747-4.378 5.81-9.967 5.81-15.737v-2.256c0-6.668-2.792-13.108-7.658-17.67C51.622 1.92 45.17-.386 38.392.054c-12.677.82-22.607 11.772-22.607 24.934v1.483c0 5.77 2.063 11.36 5.81 15.736l5.912 6.933c.55.644.783 1.493.638 2.33-.143.834-.648 1.556-1.383 1.98l-14.494 8.33C4.7 66.077 0 74.15 0 82.844v6.76h3.333v-6.76c0-7.5 4.055-14.46 10.59-18.174l14.5-8.334c1.597-.918 2.692-2.487 3.007-4.302.315-1.815-.19-3.66-1.387-5.06l-5.913-6.936c-3.23-3.775-5.01-8.594-5.01-13.57v-1.484c0-11.41 8.562-20.9 19.488-21.608 5.85-.377 11.415 1.61 15.67 5.598 4.26 3.992 6.605 9.404 6.605 15.24v2.254c0 4.976-1.778 9.796-5.01 13.57l-5.915 6.935c-1.195 1.4-1.7 3.246-1.386 5.06.313 1.816 1.41 3.385 3.008 4.303l14.507 8.338c6.525 3.71 10.58 10.67 10.58 18.17v6.76H80v-6.76c0-8.695-4.7-16.768-12.26-21.063z" fill="currentColor" fill-rule="evenodd"/></svg>
+                            <span class="hide-menu">John Doe</span>
+                        </div>
+                </div>
             </div>
             <div class="main-content grow flex column">
-                <div class="upgrade-bar no-shrink"></div>
+                <div class="upgrade-bar no-shrink">
+                    <a href="#" class="button">Effettua l'upgrade</a>
+                </div>
                 <div class="main-scroll-section grow"></div>
             </div>
         </div>
         <div class="player no-shrink flex">
             <div class="now-playing flex">
-                <div class="song-img"><img src="img/player_left.jpg" alt=""></div>
+                <div class="song-img">
+                    <img src="img/player_left.jpg" alt="">
+                </div>
                 <div class="song-name">
-                    <h5>Song name</h5>
+                    <h3>Song name</h3>
                     <p>Singer Name</p>
                 </div>
-                <div class="song-icons flex"><i class="fa-regular fa-heart"><i class="fa-regular fa-folder"></i></i></div>
+                <div class="song-icons flex">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
             </div>
             <div class="player-controls flex column center">
-                <div class="player-controls-icons">
+                <div class="player-controls-icons flex">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
                     <i class="fa-solid fa-play"></i>
@@ -38,12 +99,15 @@
                     <i class="fa-solid fa-rotate-right"></i>
                 </div>
                 <div class="player-timing flex">
-                    <div class="start-timing"></div>
-                    <div class="player-bar flex">
-                        <div class="song-percentage"></div>
-                        <div class="remaining grow"></div>
+                    <div class="timing shrink">
+                        <p>0:25</p>
                     </div>
-                    <div class="end-timing"></div>
+                    <div class="player-bar grow">
+                        <div class="song-percentage"></div>
+                    </div>
+                    <div class="timing shrink">
+                        <p>4:35</p>
+                    </div>
                 </div>
             </div>
             <div class="player-options flex">
@@ -52,9 +116,8 @@
                     <i class="fa-solid fa-display"></i>
                     <i class="fa-solid fa-volume-high"></i>
                 </div>
-                <div class="volume-bar flex">
+                <div class="volume-bar">
                     <div class="volume-percentage"></div>
-                    <div class="remaining grow"></div>
                 </div>
             </div>
         </div>
