--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="playlist hide-menu">
+                <div class="playlist hide-menu grow">
                     <div class="add-playlist">
                         <h3>PLAYLIST</h3>
                         <a href="#" class="add-button">+</a><span>Crea Playlist</span>
