--- a/index.html
+++ b/index.html
@@ -73,7 +73,82 @@
                 <div class="upgrade-bar no-shrink">
                     <a href="#" class="button">Effettua l'upgrade</a>
                 </div>
-                <div class="main-scroll-section grow"></div>
+                <div class="main-section grow flex column">
+                    <div class="menu flex no-shrink">
+                        <a href="#" class="link">IN EVIDENZA<div class="focus"></div></a>
+                        <a href="#" class="link">PODCAST</a>
+                        <a href="#" class="link">CLASSIFICHE</a>
+                        <a href="#" class="link">GENERI E MOOD</a>
+                        <a href="#" class="link">NUOVE USCITE</a>
+                        <a href="#" class="link">SCOPRI</a>
+                    </div>
+                    <div class="main-scroll-section grow">
+                        <div class="component">
+                            <h2>Recently played</h2>
+                            <p class="subtitle"></p>
+                            <div class="cards-container flex">
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/metal_lifting.jpg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Heavy Metal</h3>
+                                    <p>sottotitolo</p>
+                                </div>
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/stranger.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                                    <p>Kyle Dixon &amp; Michael Stein</p>
+                                </div>
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/aquietplace.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>A quiet place</h3>
+                                    <p>sottotitolo</p>
+                                </div>
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/split.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Split</h3>
+                                    <p>sottotitolo</p>
+                                </div>
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/cure.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>A cure for wellness</h3>
+                                    <p>sottotitolo</p>
+                                </div>
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/sinister.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Sinister</h3>
+                                    <p>sottotitolo</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="component">
+                            <h2>Creato per John Doe</h2>
+                            <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
+                            <div class="cards-container flex">
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/radar.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Release Radar</h3>
+                                </div>
+                                <div class="card flex column">
+                                    <div class="img-container"><img src="img/mixdaily.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Daily Mix 1</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="component">
+                            <h2>Artisti più popolari</h2>
+                            <p class="subtitle">Più ascolti, più accurati saranno i suggerimenti.</p>
+                            <div class="cards-container flex">
+                                <div class="card rounded flex column">
+                                    <div class="img-container"><img src="img/youg.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Lana Del Rey</h3>
+                                </div>
+                                <div class="card rounded flex column">
+                                    <div class="img-container"><img src="img/einaudi.jpeg" alt=""><div class="overlay"><i class="fa-solid fa-play"></i></div></div>
+                                    <h3>Ludovico Einaudi</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="player no-shrink flex">
