--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     </ul>
                 </div>
                 <div class="playlist grow flex column">
-                    <div class="add-playlist hide-menu">
+                    <div class="playlist-header hide-menu">
                         <h3>PLAYLIST</h3>
-                        <a href="#" class="add-button">+</a><span>Crea Playlist</span>
+                        <div class="add-playlist"><a href="#" class="add-button">+</a><span>Crea Playlist</span></div>
                     </div>
                     <div class="playlist-list grow hide-menu">
                         <ul>
@@ -178,7 +178,9 @@
                         <p>0:25</p>
                     </div>
                     <div class="player-bar grow">
-                        <div class="song-percentage"></div>
+                        <div class="song-percentage">
+                            <div class="bar-hover"></div>
+                        </div>
                     </div>
                     <div class="timing no-shrink">
                         <p>4:35</p>
@@ -192,7 +194,7 @@
                     <i class="fa-solid fa-volume-high"></i>
                 </div>
                 <div class="volume-bar">
-                    <div class="volume-percentage"></div>
+                    <div class="volume-percentage"><div class="bar-hover"></div></div>
                 </div>
             </div>
         </div>
