--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="app-container flex column">
+        <div class="logo-open-page"><img src="img/spotify-logo.svg" alt=""></div>
         <div class="main grow flex">
             <div class="sidebar no-shrink flex column">
                 <div class="logo">
